--- a/10_nginx-loadbalancer/load-balancer/Dockerfile
+++ b/10_nginx-loadbalancer/load-balancer/Dockerfile
@@ -9,3 +9,6 @@ RUN apk --update add tzdata && \
     cp /usr/share/zoneinfo/Asia/Tokyo /etc/localtime && \
     apk del tzdata && \
     rm -rf /var/cache/apk/*
+
+ADD ./etc/nginx/nginx.conf /etc/nginx.conf
+ADD ./etc/nginx/conf.d     /etc/nginx/conf.d
