lbをコメントアウト

--- a/10_nginx-loadbalancer/docker-compose.yaml
+++ b/10_nginx-loadbalancer/docker-compose.yaml
@@ -25,13 +25,13 @@ services:
     volumes:
       - ./app03/srv/www/html:/srv/www/html
       - ./app03/etc/nginx/conf.d:/etc/nginx/conf.d
-  lb:
-    build: ./load-balancer/
-    container_name: nginx-lb
-    ports:
-      - "8010:80"
-    depends_on:
-      - app01
-    volumes:
-      - ./load-balancer/etc/nginx/nginx.conf /etc/nginx.conf
-      - ./load-balancer/etc/nginx/conf.d     /etc/nginx/conf.d
+  # lb:
+  #   build: ./load-balancer/
+  #   container_name: nginx-lb
+  #   ports:
+  #     - "8010:80"
+  #   depends_on:
+  #     - app01
+  #   volumes:
+  #     - ./load-balancer/etc/nginx/nginx.conf /etc/nginx.conf
+  #     - ./load-balancer/etc/nginx/conf.d     /etc/nginx/conf.d
