--- a/10_nginx-loadbalancer/docker-compose.scale.yaml
+++ b/10_nginx-loadbalancer/docker-compose.scale.yaml
@@ -3,7 +3,7 @@ version: '3.3'
 services:
   app01:
     build: ./app01/
-    container_name: app01-red
+    # container_name: app01-red
     # ports:
     #   - "8011:80"
     volumes:
@@ -11,7 +11,7 @@ services:
       - ./app01/etc/nginx/conf.d:/etc/nginx/conf.d
   app02:
     build: ./app02/
-    container_name: app02-blue
+    # container_name: app02-blue
     # ports:
     #   - "8012:80"
     volumes:
@@ -19,7 +19,7 @@ services:
       - ./app02/etc/nginx/conf.d:/etc/nginx/conf.d
   app03:
     build: ./app03/
-    container_name: app03-green
+    # container_name: app03-green
     # ports:
     #   - "8013:80"
     volumes:
