--- a/11_python-mysql/docker-compose.yml
+++ b/11_python-mysql/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     #   MYSQL_ROOT_PASSWORD: example
     volumes:
       - ./mysql/files/etc/mysql/conf.d/mysql.cnf:/etc/mysql/conf.d/mysql.cnf
-      - ./mysql/files/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
+      # - ./mysql/files/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
 
 
   app:
