--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
               - "62:6d:f6:0d:7d:39:54:b0:b7:d5:0e:ef:43:05:e6:f5"
       - run:
           name: install curl
-          command: "apk add curl"
+          command: "apk add curl curl-dev"
       - run:
           name: remote update
           command: "git remote update -p"
