--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,12 @@ jobs:
           name: merge ${CIRCLE_BRANCH}
           command: "git merge -m \"merge branch ${CIRCLE_BRANCH} in CircleCI\" origin ${CIRCLE_BRANCH}"
       - run:
+          name: debug 1
+          command: "ls -la"
+      - run:
+          name: debug 2
+          command: "git config -l"
+      - run:
           name: push readme-only branch
           command: "git push origin modify-readme-only"
 
