--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,9 +38,9 @@ jobs:
       - run:
           name: debug 4
           command: "ssh -i ~/.ssh/id_rsa ssh@github.com"
-      - run:
-          name: push readme-only branch
-          command: "git push origin modify-readme-only"
+      # - run:
+      #     name: push readme-only branch
+      #     command: "git push origin modify-readme-only"
 
 workflows:
   version: 2
