Update Nginx version

--- a/10_nginx-loadbalancer/docker-compose.yml
+++ b/10_nginx-loadbalancer/docker-compose.yml
@@ -30,8 +30,10 @@ services:
     container_name: nginx-lb
     ports:
       - "8010:80"
-    depends_on:
-      - app01
+    # depends_on:
+    #   - app01
+    #   - app02
+    #   - app03
     volumes:
       # - ./load-balancer/etc/nginx/nginx.conf /etc/nginx.conf
       - ./load-balancer/etc/nginx/conf.d:/etc/nginx/conf.d
