--- a/11_python-mysql/docker-compose.yml
+++ b/11_python-mysql/docker-compose.yml
@@ -4,7 +4,8 @@ services:
 
   db:
     build: ./mysql/
-    env_file: .env
+    env_file: 
+      - .python-mysql.env
     container_name: python-mysql-db
     # command: --default-authentication-plugin=mysql_native_password
     restart: always
@@ -17,7 +18,8 @@ services:
 
   app:
     build: ./python/
-    env_file: .env
+    env_file:
+      - .python-mysql.env
     container_name: python-mysql-app
     volumes:
       - ./:/opt/python-mysql
