--- a/11_python-mysql/docker-compose.yml
+++ b/11_python-mysql/docker-compose.yml
@@ -3,14 +3,12 @@ version: '3.3'
 services:
 
   db:
-    build: 
-      - ./mysql/
+    build: ./mysql/
     env_file: 
       - .python-mysql.env
     container_name: python-mysql-db
     # command: --default-authentication-plugin=mysql_native_password
-    restart: 
-      - always
+    restart: always
     # environment:
     #   MYSQL_ROOT_PASSWORD: example
     volumes:
@@ -19,17 +17,13 @@ services:
 
 
   app:
-    build: 
-      - ./python/
+    build: ./python/
     env_file:
       - .python-mysql.env
-    container_name: 
-      - python-mysql-app
+    container_name: python-mysql-app
     volumes:
       - ./:/opt/python-mysql
-    tty: 
-      - true
-    working_dir: 
-      - '/opt/python-mysql'
+    tty: true
+    working_dir: '/opt/python-mysql'
     depends_on:
       - db
