--- a/22_ssl-nginx-grafana/nginx/etc/nginx/nginx.conf
+++ b/22_ssl-nginx-grafana/nginx/etc/nginx/nginx.conf
@@ -50,7 +50,13 @@ http {
     gzip_proxied any;
     gzip_min_length 1024;
     gzip_comp_level 6;
-    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript application/json;
+    gzip_types text/plain
+               text/css
+               application/x-javascript
+               application/xml
+               application/xml+rss text/javascript
+               application/javascript
+               application/json;
 
     open_file_cache max=100000 inactive=20s;
     open_file_cache_valid 30s;
