--- a/22_ssl-nginx-grafana/nginx/etc/nginx/sites-enabled/ssl-default.conf
+++ b/22_ssl-nginx-grafana/nginx/etc/nginx/sites-enabled/ssl-default.conf
@@ -17,18 +17,18 @@ server {
         rewrite ^(.*)$ https://www.google.com/;
     }
 }
-server {
-    listen 0.0.0.0:80;
-    listen [::]:80;
-
-    server_name board.iganari.com;
-    server_tokens off;
-
-    return 301 https://$http_host$request_uri;
-    
-    access_log /var/log/nginx/access.log;
-    error_log  /var/log/nginx/error.log;
-}
+# server {
+#     listen 0.0.0.0:80;
+#     listen [::]:80;
+# 
+#     server_name board.iganari.local;
+#     server_tokens off;
+# 
+#     return 301 https://$http_host$request_uri;
+#     
+#     access_log /var/log/nginx/access.log;
+#     error_log  /var/log/nginx/error.log;
+# }
 
 server {
     listen 0.0.0.0:443 default_server;
@@ -45,21 +45,23 @@ server {
     }
 }
 server {
-    listen 0.0.0.0:443;
-    listen [::]:443;
+    # listen 0.0.0.0:443;
+    listen 0.0.0.0:80;
+    # listen [::]:443;
+    listen [::]:80;
 
-    server_name board.iganari.com;
+    server_name board.iganari.local;
     server_tokens off;
 
-    ssl on;
-    ssl_certificate     /etc/nginx/ssl/board.iganari.com.20190530.crt;
-    ssl_certificate_key /etc/nginx/ssl/board.iganari.com.20190530.key;
+    # # ssl on;
+    # ssl_certificate     /etc/nginx/ssl/board.iganari.local.20190604.crt;
+    # ssl_certificate_key /etc/nginx/ssl/board.iganari.local.20190604.key;
   
-    ssl_ciphers "ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA:ECDHE-RSA-DES-CBC3-SHA:AES256-GCM-SHA384:AES128-GCM-SHA256:AES256-SHA256:AES128-SHA256:AES256-SHA:AES128-SHA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!MD5:!PSK:!RC4";
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-    ssl_prefer_server_ciphers on;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 5m;
+    # ssl_ciphers "ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA:ECDHE-RSA-DES-CBC3-SHA:AES256-GCM-SHA384:AES128-GCM-SHA256:AES256-SHA256:AES128-SHA256:AES256-SHA:AES128-SHA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!MD5:!PSK:!RC4";
+    # ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    # ssl_prefer_server_ciphers on;
+    # ssl_session_cache shared:SSL:10m;
+    # ssl_session_timeout 5m;
     
     access_log /var/log/nginx/access.log;
     error_log  /var/log/nginx/error.log;
